# cg-final-oficial

./: .gitignore  Cargo.toml  app.rs  build.sh  object.rs  paralelo.py  sequencial.py
src/: constants.rs  main.rs  object copia.rs  object.rs  render.rs  types.rs  utils.rs
src/app/: app.rs  color_input.rs  mod.rs  parse_input.rs  vector_input.rs
