[package]
name = "cg-final-oficial"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
eframe = "0.30.0"
nalgebra = { version = "0.33.2", features = ["serde", "serde-serialize"] }
ordered-float = "4.6.0"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
rfd = "0.10"
rayon = "1.10.0"
